// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chain Resolvers getChainBalance 1`] = `
Object {
  "data": Object {
    "getChainBalance": 1000000,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Chain Resolvers getPendingChainBalance 1`] = `
Object {
  "data": Object {
    "getPendingChainBalance": 1000000,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
